--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ matplotlib>=3.7.0
 seaborn>=0.12.0
 scikit-learn>=1.3.0
 notebook>=7.0.0
-imblearn>=0.0   
+imbalanced-learn>=0.11.0  
 xgboost>=1.7.0   
